# cove-video-editor

./: .gitignore  CLAUDE.md  README.md  build.ps1  handoff.md  pyproject.toml
.github/workflows/: release.yml
packaging/: cove-video-editor.desktop  installer.iss  launcher.py
scripts/: build-release.sh  build-windows-wine.sh  smoke-export-formats.py
src/cove_video_editor/: __main__.py  app.py  clip.py  clip_bin.py  crop_overlay.py  downloader.py  exporter.py  ffmpeg_utils.py  portable.py  theme.py  thumbnails.py  timeline_widget.py  titlebar.py  updater.py
tests/: test_exporter_filtergraph.py
